# Cells

./: Cargo.toml  README.md
crates/app_trait_2/: Cargo.toml
crates/app_trait_2/src/: lib.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: accumulator.rs  lib.rs  timer_node.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/egui_binding/: Cargo.toml
crates/egui_binding/shaders/: shader.frag  shader.vert
crates/egui_binding/shaders/compiled/: frag.spv  vert.spv
crates/egui_binding/src/: lib.rs  wgpu_backend.rs  winit_backend.rs
crates/input_events_2/: Cargo.toml
crates/input_events_2/src/: event.rs  lib.rs  state.rs
crates/macro_trait_impl/: Cargo.toml
crates/macro_trait_impl/src/: lib.rs
crates/no_alias/: Cargo.toml
crates/no_alias/src/: lib.rs
crates/quintuple_buffer/: Cargo.toml
crates/quintuple_buffer/src/: lib.rs
crates/reflect/: Cargo.toml
crates/reflect/reflect_derive/: Cargo.toml
crates/reflect/reflect_derive/src/: lib.rs
crates/reflect/src/: egui_impl.rs  imgui_impl.rs  lib.rs
crates/reflect/src/old/: egui.rs  imgui.rs  imgui_2.rs  mod.rs
crates/slab/: Cargo.toml
crates/slab/src/: lib.rs  slab2.rs
crates/static_data/: Cargo.toml
crates/static_data/src/: lib.rs
crates/threadpool/: Cargo.toml
crates/threadpool/src/: lib.rs  utils.rs
crates/unsafe_ptr/: Cargo.toml
crates/unsafe_ptr/src/: lib.rs
crates/unwrap_unchecked/: Cargo.toml
crates/unwrap_unchecked/src/: lib.rs
crates/wgpu_renderer3/: Cargo.toml
crates/wgpu_renderer3/shaders/2D_colored/: shader.frag  shader_f32.vert  shader_i32.vert
crates/wgpu_renderer3/shaders/2D_colored/compiled/: frag.spv  vert_f32.spv  vert_i32.spv
crates/wgpu_renderer3/shaders/2D_textured/: shader.comp  shader.frag  shader_f32.vert  shader_i32.vert
crates/wgpu_renderer3/shaders/2D_textured/compiled/: comp.spv  frag.spv  vert_f32.spv  vert_i32.spv
crates/wgpu_renderer3/shaders/ssaa/: shader.frag  shader.vert
crates/wgpu_renderer3/shaders/ssaa/compiled/: frag.spv  vert.spv
crates/wgpu_renderer3/src/: lib.rs
crates/wgpu_renderer3/src/pipelines/: generic_pipeline.rs  mod.rs  msaa.rs  pipeline_compute_vertex_i32.rs  renderer_pipeline_colored_i32.rs  renderer_pipeline_textured_i32.rs  ssaa.rs
crates/wgpu_renderer3/src/vertex_data/: colored_2d_f32.rs  colored_2d_i32.rs  mod.rs  textured_2d_f32.rs  textured_2d_i32.rs  textured_2d_i32_compute.rs
src/: app.rs  debug.rs  main.rs  prelude.rs  window.rs
src/game/: gui.rs  mod.rs  player.rs
src/game/entity/: entities.rs  factory.rs  index.rs  mod.rs
src/game/map/: matrix_physics.rs  matrix_simple.rs  mod.rs
src/game/map/premade/: debug_map_collisions.rs  map_1_000_000_cells.rs  map_autonomous.rs  map_black_hole.rs  map_classic.rs  map_collisions.rs  map_definitive.rs  map_example.rs  map_exponential.rs  map_exponential_extreme.rs  map_gravity.rs  map_mona_lisa.rs  map_negative_gravity.rs  map_paint.rs  map_particles.rs  map_trail.rs  mod.rs
src/game/settings/: colors.rs  mod.rs
src/game_solver/: drawing_buffer_solver.rs  events_solver.rs  map_solver.rs  mod.rs  smooth_wait_solver.rs
src/game_solver/apply_cache_solver/: cache_entity.rs  cache_game.rs  cache_map.rs  cache_player.rs  mod.rs
src/game_solver/entity_solver/: eating_solver.rs  gravity_solver.rs  mod.rs  no_interactions_solver.rs  position_solver.rs  special_solver.rs  throwing_entity_solver.rs  velocity_solver.rs
src/game_solver/entity_solver/collisions_solver/: mod.rs  reaction.rs
src/game_solver/entity_solver/collisions_solver/detection/: mod.rs  solver.rs
src/renderer/: mod.rs
src/renderer/solver/: camera_solver.rs  interpolation_solver.rs  mod.rs
src/renderer/solver/custom_pipeline/: mod.rs  shader.frag  shader.vert
src/utils/: message_box.rs  mod.rs  vec_bool.rs  vec_chunk.rs
(+2 files in other folders)
