[package]
name = "cells"
version = "0.1.0"
authors = [""]
edition = "2018"
default-run = "cells"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serialize"]
rpmalloc_feature = ["rpmalloc"]
serialize = ["reflect", "bincode", "ron", "euclid/serde"]

[dependencies]
anyhow = "1.0.37"
app_trait = { path = "crates/app_trait_2" }
arrayvec = "0.5.2"
benchmark = { path = "crates/benchmark" }
bincode = { version = "1.3.1", optional = true }
bitflags = "1.2"
buffer = { path = "crates/buffer" }
crossbeam-utils = "0.8.1"
euclid = { version = "0.22" }
epaint = "0.10"
futures-executor = "0.3.9"
image = "0.23.12"
imgui = "0.7.0"
imgui-winit-support = { version = "0.7" }
imgui-wgpu = { git = "https://github.com/Aeledfyr/imgui-wgpu-rs", rev = "ef79a9ffce1a07b4763e7116105c30754e062490" }
input_events = { path = "crates/input_events_2" }
macro_trait_impl = { path = "crates/macro_trait_impl" }
no_alias = { path = "crates/no_alias" }
parking_lot = "0.11.1"
quintuple_buffer = { path = "crates/quintuple_buffer" }
rand = "0.8"
raw-window-handle = "0.3.3"
reflect = { path = "crates/reflect", optional = true }
ron = { version = "0.6.2", optional = true }
rpmalloc = { version = "0.2.0", optional = true }
rustc-hash = "1.1.0"
serde = "1"
slab = { path = "crates/slab" }
smallvec = "1.5"
spin = { version = "0.7.0", features = ["std"] }
static_data = { path = "crates/static_data" }
threadpool = { path = "crates/threadpool" }
unsafe_ptr = { path = "crates/unsafe_ptr" }
wgpu = "0.7"
wgpu_renderer = { path = "crates/wgpu_renderer3" }
winapi = { version = "0.3.9", features = ["winuser"] }
winit = "0.24"


egui = "0.10"
egui_binding =  { path = "crates/egui_binding", default-features = false, features = ["wgpu_7"] }
wasmtime = "0.25.0"