[package]
name = "threadpool"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#core_affinity = "0.5.10"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8.0"
parking_lot = "0.11"
unsafe_ptr = { path = "../unsafe_ptr" }