[package]
name = "wgpu_renderer"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
#futures-lite = "1.11.2"
futures-executor = "0.3.9"
image = "0.23.12"
raw-window-handle = "0.3.3"
winit = "0.24"
wgpu = "0.7"